# LiNet

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  main.cu
include/: choicenet.h  chunk.cuh  chunk.h  cuda.h  matrix.h  memq.h  neuron.cuh  neuron.h  neuron_math.cuh
py/: fourier_delay.py  impulse_delay.py  linet.py  linet_helpers.py  main.py  ordinet.py  profile.csv  reinforce.py  train.py  trainer.py
py/training_data/: BTC-USD.csv
src/: choicenet.cu  chunk.cu  cuda.cu  matrix.cu  memq.cu  neuron.cu
